Fix sprockets and adjust alignments

--- a/app/assets/stylesheets/base/globals.scss.sass
+++ b/app/assets/stylesheets/base/globals.scss.sass
@@ -1,35 +1,23 @@
 body
   background-color: #232323
-  color: #FB4B4E
+  color: cyan
   padding: 20px
   padding-bottom: 100px
   font-family: sans-serif
-  text-align: center
   
 h1
   font-size: 4em
+  text-align: center
   
 h3
   font-size: 1.5em
 
 .wrapper
-  display: grid
-  grid-template-columns: repeat(5, 1fr)
-  grid-gap: 30px
-  grid-auto-rows: minmax(100px, auto)
+  justify-content: center
 
 .big-center
-  grid-row: 1 / 5
-  grid-column: 2 / 5
+  text-align: center
 
-.right 
-  grid-row: 2 / 5
-  grid-column: 5 / 5
 
-.low-center 
-  grid-row: 5 / 5
-  grid-column: 2 / 5
   
-.four
-  grid-row: 1/ 5
-  grid-column: 1/3
+
